# trajectorygen

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  mainpos.cpp  mainvel.cpp  motion.h  periodic.h
